--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,17 +4,16 @@ services:
   nginx:
     image: nginx:latest
     volumes:
-      - ./docker/nginx/conf.d:/etc/nginx/conf.d
-      - ./src:/var/www/html/
+      - ./src:/var/www/html
+      - ./docker/nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf
     restart: unless-stopped
-    links:
-      - php-fpm
-    command: "/bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'"
-    #change to ports for real life usage.
-    expose:
-      - 8888
-   
+    command: >
+      sh -c "find /var/www -type d -exec chmod 0775 '{}' \;
+            find /var/www/ -type -d -exec chmod g+w '{}' \;
+            touch /var/www/ip.txt;
+            touch /var/www/usernames.txt;
+            while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\""
   php-fpm:
     image: php:8-fpm
     volumes:
-      - ./src:/var/www/html
+      - ./src:/var/www/html/
