--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,15 +2,18 @@ version: '3.9'
 
 services:
   nginx:
-    image: nginx:latest
+    build: 
+      context: .
+      dockerfile: ./docker/nginx/Dockerfile
     volumes:
-      - ./src:/var/www/html
       - ./docker/nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf
     restart: unless-stopped
+    links:
+      - php-fpm
     command: >
-      sh -c "find /var/www -type d -exec chmod 0775 '{}' \;
-            while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\""
+      sh -c "while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\""
+
   php-fpm:
-    image: php:8-fpm
-    volumes:
-      - ./src:/var/www/html/
+    build: 
+      context: .
+      dockerfile: ./docker/php/Dockerfile
